--- a/login/styles/login.scss
+++ b/login/styles/login.scss
@@ -3,3 +3,117 @@
 
 // variables
 @import "../../styles/variables.scss";
+
+// header
+header {
+  width: 100%;
+  height: 260px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .header_event {
+    width: 100%;
+    height: 60px;
+    background: #f37100;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .header_inner {
+    width: 1650px;
+    height: 200px;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+    position: relative;
+
+    .header_inner_left {
+      display: flex;
+      justify-content: start;
+      align-items: end;
+      position: absolute;
+      left: 0;
+      bottom: 20px;
+      ul {
+        display: flex;
+        gap: 60px;
+        li {
+          font-size: 28px;
+        }
+      }
+    }
+    .header_inner_right {
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+      gap: 95px;
+      position: absolute;
+      right: 0;
+      .inner_right_top {
+        ul {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+        }
+      }
+      .inner_right_bottom {
+        display: flex;
+        align-items: center;
+        gap: 25px;
+        .search_bar {
+          width: 280px;
+          height: 40px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 10px 25px;
+          border-radius: 40px;
+          background: #ccc;
+          input {
+            width: 90%;
+            background: inherit;
+            border: none;
+            opacity: 1;
+            &:focus {
+              outline: none;
+              &::placeholder {
+                transition: all 0.3s;
+                opacity: 0;
+              }
+            }
+          }
+        }
+        .basket {
+          .fa-cart-shopping {
+            width: 40px;
+            height: 32px;
+            font-size: 32px;
+            position: relative;
+            p {
+              width: 20px;
+              height: 20px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              background: #f37100;
+              color: #ffffff;
+              border-radius: 50%;
+              position: absolute;
+              top: -5px;
+              right: -5px;
+              font-size: 12px;
+            }
+          }
+        }
+      }
+    }
+    .header_inner_logo {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
