--- a/detail/styles/detail.scss
+++ b/detail/styles/detail.scss
@@ -1,2 +1,148 @@
 @import "../../styles/reset.scss";
 @import "../../styles/variables.scss";
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  width: 100%;
+  height: 100%;
+  font-family: map-get($map: $font, $key: pretendard);
+}
+
+.detail_main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  text-align-last: left;
+
+  .detail_section {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 50px;
+  }
+
+  .detail_figure {
+    width: 560px;
+    height: 560px;
+    position: relative;
+    overflow: hidden;
+
+    .detail_image {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      border-radius: 10px;
+    }
+  }
+
+  .detail_article {
+    width: 440px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .detail_header {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+
+      .detail_title {
+        text-align: center;
+        color: map-get($map: $color, $key: dark);
+        font-size: 5rem;
+        font-weight: 700;
+      }
+
+      .detail_subtitle {
+        color: map-get($map: $color, $key: gray-999);
+        font-size: 2rem;
+        font-weight: 300;
+      }
+    }
+
+    .detail_price {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+
+      .detail_discount {
+        color: map-get($map: $color, $key: main-01);
+        font-size: 30px;
+        font-weight: 700;
+        .discount_percent {
+          font-size: 1.6rem;
+        }
+      }
+
+      .detail_final-price {
+        color: map-get($map: $color, $key: dark);
+        font-size: 3rem;
+        font-weight: 700;
+        .price_won {
+          font-size: 1.8rem;
+        }
+      }
+      .detail_original-price {
+        del {
+          color: map-get($map: $color, $key: gray-999);
+        }
+      }
+    }
+
+    .detail_review {
+      display: flex;
+      span {
+        .detail_rating {
+          font-size: 1.8rem;
+          font-weight: 700;
+          margin-right: 30px;
+        }
+        .detail_view {
+          font-size: 1.8rem;
+          font-weight: 700;
+        }
+        p {
+          margin-top: 10px;
+        }
+      }
+    }
+
+    .detail_info {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+
+      .detail_list {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        justify-content: space-between;
+      }
+    }
+
+    .detail_footer {
+      height: 60px;
+      background: map-get($map: $color, $key: main-02);
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .detail_button {
+        color: map-get($map: $color, $key: light);
+        font-size: 20px;
+        font-weight: 700;
+        background: none;
+        border: none;
+        cursor: pointer;
+      }
+    }
+  }
+}
