--- a/detail/styles/detail.css
+++ b/detail/styles/detail.css
@@ -20,124 +20,433 @@ html {
 
 body {
   font-size: 1.6rem;
-  width: 100%;
-  height: 100%;
   font-family: pretendard;
 }
 
-.detail_main {
+.detail_container {
   width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.detail_line {
+  width: 1050px;
+  height: 2px;
+  background-color: #f37100;
+  border: none;
+  margin: 0 auto;
+}
+
+.detail_review,
+.detail_product,
+.detail_faq,
+.detail_policy {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 40px;
+}
+
+/* info */
+.detail_info {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  gap: 50px;
+}
+.detail_info img {
+  border-radius: 10px;
+}
+.detail_info .img_info {
+  display: flex;
+  flex-direction: column;
+}
+.detail_info .info_title {
+  margin-bottom: 30px;
+}
+.detail_info .info_title h1 {
+  font-size: 4rem;
+}
+.detail_info .info_title p {
+  font-size: 2.2rem;
+  color: #999;
+}
+.detail_info .info_price .price_one {
+  font-size: 4rem;
+  font-weight: bold;
+  color: #f37100;
+}
+.detail_info .info_price .price_one .price_sub {
+  font-size: 2.4rem;
+}
+.detail_info .info_price .price_two {
+  font-size: 4rem;
+  font-weight: bold;
+}
+.detail_info .info_price .price_two .price_sub {
+  font-size: 2.4rem;
+}
+.detail_info .info_price .price_three {
+  font-size: 1.2rem;
+  color: #999;
+  margin-bottom: 10px;
+}
+.detail_info .info_review {
+  margin-bottom: 40px;
+}
+.detail_info .info_review .fa-star {
+  font-size: 2.4rem;
+  background: linear-gradient(to right, #c1d95b, #ffd6b0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  cursor: pointer;
+}
+.detail_info .info_review .review_rating {
+  font-weight: bold;
+  font-size: 2.4rem;
+  margin-right: 30px;
+}
+.detail_info .info_review .review_re {
+  font-weight: bold;
+  font-size: 2.2rem;
+}
+.detail_info .info_review .review_few {
+  font-size: 2.2rem;
+}
+.detail_info .info_review p {
+  font-size: 1.2rem;
+}
+.detail_info .info_btns {
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.detail_info .info_btns .organic_btn {
+  font-weight: bold;
+  border: 1px solid #f37100;
+  border-radius: 20px;
+  padding: 6px 18px;
+  background: #fff;
+  color: #f37100;
+  cursor: pointer;
+}
+.detail_info .info_btns .event_btn {
+  font-weight: bold;
+  border: none;
+  padding: 6px 18px;
+  border-radius: 20px;
+  background: linear-gradient(to right, #c1d95b, #ffd6b0);
+  color: #fff;
+  cursor: pointer;
+}
+.detail_info .info_option table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 1rem;
+}
+.detail_info .info_option table th {
+  text-align: left;
+  padding-right: 3rem;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+.detail_info .info_option table td {
+  font-size: 1.2rem;
+}
+.detail_info .info_purchase {
+  margin-bottom: 10px;
+}
+.detail_info .info_purchase button {
+  border: none;
+  border-radius: 10px;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #fff;
+  background: #f37100;
+  padding: 15px 157px;
+  cursor: pointer;
+}
+
+/* review */
+.detail_review {
+  width: 1050px;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+.detail_review .review_text {
+  text-align: left;
+}
+.detail_review .review_text .text_review {
+  font-size: 3rem;
+  font-weight: 700;
+  word-wrap: break-word;
+}
+.detail_review .review_text .text_few {
+  color: #f37100;
+  font-size: 2.4rem;
+  font-weight: 700;
+  word-wrap: break-word;
+}
+.detail_review .review_star {
+  width: 1050px;
+  height: 100%;
+  margin: 50px auto;
+  padding: 20px;
+  background: #fffaf1;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+}
+.detail_review .review_star .star {
+  font-size: 1.6rem;
+  font-weight: 300;
+}
+.detail_review .review_star .rating {
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+.detail_review .review_star .rating .rating_one {
+  font-weight: 700;
+  color: #f37100;
+}
+.detail_review .review_member {
+  width: 1050px;
+  height: 100%;
+  margin: 40px auto;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 50px;
-  -moz-text-align-last: left;
-       text-align-last: left;
 }
-.detail_main .detail_section {
+.detail_review .review_member > div:first-child {
+  cursor: pointer;
+}
+.detail_review .review_member > div:first-child p {
+  font-size: 1.8rem;
+}
+.detail_review .review_member > div:first-child p span {
+  color: #ffcc00;
+}
+.detail_review .review_member > div:first-child .member_content {
+  margin: 20px auto;
+  gap: 20px;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-  gap: 50px;
+  font-size: 1.15rem;
 }
-.detail_main .detail_figure {
-  width: 560px;
-  height: 560px;
-  position: relative;
-  overflow: hidden;
-}
-.detail_main .detail_figure .detail_image {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+.detail_review .review_member > div:first-child .member_content img {
   border-radius: 10px;
 }
-.detail_main .detail_article {
-  width: 440px;
+.detail_review .review_member > div:first-child .member_content > div {
   display: flex;
   flex-direction: column;
+}
+.detail_review .review_member > div:first-child .member_content > div p {
+  font-size: 1rem;
+  color: #999;
+  margin: 20px 0px 0px;
+}
+.detail_review .review_member > div:last-child {
+  cursor: pointer;
+}
+.detail_review .review_member > div:last-child p {
+  font-size: 1.8rem;
+}
+.detail_review .review_member > div:last-child p span {
+  color: #ffcc00;
+}
+.detail_review .review_member > div:last-child .member_content {
+  margin: 20px auto;
+  gap: 20px;
+  display: flex;
+  font-size: 1.15rem;
+}
+.detail_review .review_member > div:last-child .member_content img {
+  border-radius: 10px;
+}
+.detail_review .review_member > div:last-child .member_content > div {
+  display: flex;
+  flex-direction: column;
+}
+.detail_review .review_member > div:last-child .member_content > div p {
+  font-size: 1rem;
+  color: #999;
+  margin: 20px 0px 0px;
+}
+.detail_review .review_more {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #858585;
+  border-radius: 10px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  gap: 10px;
+  padding: 20px;
+  margin-bottom: 80px;
+  font-size: 1.6rem;
+  cursor: pointer;
+}
+
+/* product */
+.detail_product {
+  width: 1050px;
+  margin: 0 auto;
+  flex-direction: column;
+}
+.detail_product .product_title {
+  margin-bottom: 80px;
+}
+.detail_product .product_title h1 {
+  font-size: 3rem;
+  display: inline-block;
+  position: relative;
+  margin-bottom: 30px;
+}
+.detail_product .product_title h1::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 3px;
+  background: #f37100;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+}
+.detail_product .product_title img {
+  border-radius: 30px;
+}
+.detail_product .product_thumb .thumb_one {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 50px;
+}
+.detail_product .product_thumb .thumb_one p {
+  width: 50px;
+  height: 50px;
+  background: #ff9900;
+  border-radius: 9999px;
+  color: #fff;
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 20px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.detail_product .product_thumb .thumb_one h4 {
+  font-size: 2.6rem;
+  font-weight: 700;
+  color: #000;
+}
+.detail_product .product_thumb .thumb_one span {
+  width: 800px;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 2rem;
+  color: #000;
+}
+.detail_product .product_thumb .thumb_one img {
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+}
+
+/* faq */
+.detail_faq {
+  width: 100%;
+  max-width: 1050px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 20px;
 }
-.detail_main .detail_article .detail_header {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
+.detail_faq .faq_title {
+  width: 100%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
-.detail_main .detail_article .detail_header .detail_title {
-  text-align: center;
-  color: #000;
-  font-size: 5rem;
-  font-weight: 700;
-}
-.detail_main .detail_article .detail_header .detail_subtitle {
-  color: #999;
-  font-size: 2rem;
-  font-weight: 300;
-}
-.detail_main .detail_article .detail_price {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-.detail_main .detail_article .detail_price .detail_discount {
-  color: #f37100;
-  font-size: 30px;
-  font-weight: 700;
-}
-.detail_main .detail_article .detail_price .detail_discount .discount_percent {
-  font-size: 1.6rem;
-}
-.detail_main .detail_article .detail_price .detail_final-price {
-  color: #000;
+.detail_faq .faq_title > span {
   font-size: 3rem;
   font-weight: 700;
 }
-.detail_main .detail_article .detail_price .detail_final-price .price_won {
-  font-size: 1.8rem;
-}
-.detail_main .detail_article .detail_price .detail_original-price del {
-  color: #999;
-}
-.detail_main .detail_article .detail_review {
-  display: flex;
-}
-.detail_main .detail_article .detail_review span .detail_rating {
-  font-size: 1.8rem;
-  font-weight: 700;
-  margin-right: 30px;
-}
-.detail_main .detail_article .detail_review span .detail_view {
-  font-size: 1.8rem;
-  font-weight: 700;
-}
-.detail_main .detail_article .detail_review span p {
-  margin-top: 10px;
-}
-.detail_main .detail_article .detail_info {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-.detail_main .detail_article .detail_info .detail_list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  justify-content: space-between;
-}
-.detail_main .detail_article .detail_footer {
-  height: 60px;
-  background: #ff9900;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.detail_main .detail_article .detail_footer .detail_button {
+.detail_faq .faq_title > button {
+  width: 150px;
+  height: 40px;
+  background: #f37100;
   color: #fff;
-  font-size: 20px;
+  font-size: 1.6rem;
   font-weight: 700;
-  background: none;
+  border-radius: 10px;
   border: none;
   cursor: pointer;
 }
+.detail_faq .faq_subTitle {
+  width: 100%;
+  text-align: left;
+}
+.detail_faq > table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: center;
+  margin-top: 50px;
+  border-bottom: 1px solid #f37100;
+}
+.detail_faq > table th {
+  font-size: 2.2rem;
+  font-weight: 600;
+  color: #f37100;
+  padding: 10px;
+  border-top: 2px solid #f37100;
+  border-bottom: 1px solid #f37100;
+}
+.detail_faq > table td {
+  font-size: 2rem;
+  font-weight: 400;
+  color: #000;
+  padding: 30px 0;
+  cursor: pointer;
+}
+.detail_faq > table td .fa-lock {
+  font-size: 1.3rem;
+  width: 13px;
+  height: 16px;
+  margin-left: 20px;
+  color: #858585;
+}
+.detail_faq .faq_number {
+  display: flex;
+  justify-content: center;
+  gap: 34px;
+  margin: 50px 0px 80px 0px;
+}
+.detail_faq .faq_number div {
+  font-size: 22px;
+  font-weight: 400;
+  color: black;
+  cursor: pointer;
+}
+.detail_faq .faq_number div:first-child {
+  color: #f37100;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+/* policy */
