--- a/detail/styles/detail.css
+++ b/detail/styles/detail.css
@@ -1,3 +1,4 @@
+/* Reset & Variables */
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +15,8 @@ a {
   color: inherit;
 }
 
+/* Product Thumbnail */
+/* Review Content */
 html {
   font-size: 62.5%;
 }
@@ -23,14 +26,18 @@ body {
   font-family: pretendard;
 }
 
+/* main */
 .detail_container {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 100px auto 270px auto;
 }
 
+/* hr */
 .detail_line {
   width: 1050px;
   height: 2px;
@@ -39,6 +46,8 @@ body {
   margin: 0 auto;
 }
 
+/* 5 Section */
+.detail_info,
 .detail_review,
 .detail_product,
 .detail_faq,
@@ -450,3 +459,97 @@ body {
 }
 
 /* policy */
+.detail_policy {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 80px auto;
+  gap: 60px;
+}
+.detail_policy .policy_title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  width: 1050px;
+}
+.detail_policy .policy_title > h1 {
+  font-size: 3rem;
+  font-family: pretendard;
+  font-weight: 700;
+  color: #000;
+}
+.detail_policy .policy_title > p {
+  width: 906px;
+  font-size: 1.6rem;
+  font-family: pretendard;
+  font-weight: 400;
+  line-height: 2.4rem;
+  color: #000;
+}
+.detail_policy .policy_contents {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 30px;
+}
+.detail_policy .policy_contents .policy_first, .detail_policy .policy_contents .policy_last {
+  width: 505px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 14px;
+}
+.detail_policy .policy_contents .policy_first > h2, .detail_policy .policy_contents .policy_last > h2 {
+  width: 100%;
+  height: 60px;
+  border-radius: 10px;
+  outline: 1px solid #858585;
+  outline-offset: -1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8rem;
+  font-family: pretendard;
+  font-weight: 500;
+  text-align: center;
+  color: #000;
+}
+.detail_policy .policy_contents .policy_first p, .detail_policy .policy_contents .policy_last p {
+  font-size: 1.6rem;
+  font-family: pretendard;
+  font-weight: 400;
+  line-height: 2.4rem;
+  color: #000;
+}
+.detail_policy .policy_contents .policy_first strong, .detail_policy .policy_contents .policy_last strong {
+  font-weight: 600;
+}
+.detail_policy .policy_contents .policy_first ul, .detail_policy .policy_contents .policy_last ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  line-height: 1rem;
+  margin: 0px 0px 30px -14px;
+}
+.detail_policy .policy_contents .policy_first ul li, .detail_policy .policy_contents .policy_last ul li {
+  font-size: 1.4rem;
+  font-family: pretendard;
+  font-weight: 300;
+  line-height: 1rem;
+  color: #000;
+  padding-left: 15px;
+  text-align: left;
+}
+.detail_policy .policy_contents .policy_last table tr td {
+  font-size: 1.4rem;
+  font-family: pretendard;
+  font-weight: 400;
+  line-height: 3.3rem;
+  color: #000;
+}
