--- a/login/styles/mypage.scss
+++ b/login/styles/mypage.scss
@@ -160,142 +160,141 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 30px;
-  .login_inner {
+  gap: 100px;
+  .mypage_inner {
     width: 1050px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    .login_01 {
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    .mypage {
+      width: 600px;
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
       gap: 30px;
       h2 {
         font-family: map-get($map: $font, $key: pretendard);
-        font-size: 3.4rem;
+        font-size: 3.6rem;
         font-weight: bold;
       }
-      .login_input {
+      .mypage_data {
         display: flex;
-        flex-direction: column;
-        gap: 20px;
-        .login_pw {
+        // justify-content: space-between;
+        gap: 50px;
+        .mypage_info {
+          width: 100px;
           display: flex;
-          position: relative;
-          .fa-eye {
-            position: absolute;
-            top: 50%;
-            right: 20px;
-            transform: translateY(-50%);
-            color: map-get($map: $color, $key: gray-999);
+          flex-direction: column;
+          gap: 30px;
+          li {
+            width: 100%;
+            height: 30px;
+            font-family: map-get($map: $font, $key: pretendard);
+            font-size: 2rem;
+            font-weight: bold;
           }
         }
-        input {
+        .mypage_detail {
           width: 450px;
-          height: 60px;
-          border-radius: 10px;
-          padding: 10px 20px;
-          font-family: map-get($map: $font, $key: pretendard);
-          font-size: 1.8rem;
-          color: map-get($map: $color, $key: gray-999);
-          border: 1px solid map-get($map: $color, $key: gray-999);
-          &:focus {
-            color: map-get($map: $color, $key: dark);
-            &::placeholder {
-              transition: all 0.3s;
-              opacity: 0;
+          display: flex;
+          flex-direction: column;
+          // align-items: end;
+          gap: 30px;
+          li {
+            width: 100%;
+            height: 30px;
+            display: flex;
+            justify-content: space-between;
+            p {
+              font-family: map-get($map: $font, $key: pretendard);
+              font-size: 2rem;
+            }
+            button {
+              width: 40px;
+              height: 30px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border: none;
+              border-radius: 8px;
+              background: map-get($map: $color, $key: main-01);
+              color: map-get($map: $color, $key: light);
+              font-family: map-get($map: $font, $key: pretendard);
+              font-size: 1.4rem;
+              font-weight: bold;
+              cursor: pointer;
             }
           }
         }
       }
-      button {
-        width: 450px;
-        height: 60px;
-        background: map-get($map: $color, $key: main-01);
-        color: map-get($map: $color, $key: light);
-        border: none;
-        border-radius: 10px;
+    }
+    .mypage_policy {
+      width: 600px;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      h2 {
         font-family: map-get($map: $font, $key: pretendard);
-        font-size: 2rem;
+        font-size: 3.6rem;
         font-weight: bold;
-        cursor: pointer;
       }
-      ul {
+      .policy_personal {
         display: flex;
+        justify-content: space-between;
         align-items: center;
-        gap: 10px;
-        li {
+        p {
+          font-family: map-get($map: $font, $key: pretendard);
+          font-size: 2rem;
+          font-weight: bold;
+        }
+        button {
+          width: 40px;
+          height: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border: none;
+          border-radius: 8px;
+          background: map-get($map: $color, $key: main-01);
+          color: map-get($map: $color, $key: light);
           font-family: map-get($map: $font, $key: pretendard);
           font-size: 1.4rem;
-          color: map-get($map: $color, $key: gray-666);
+          font-weight: bold;
+          cursor: pointer;
+        }
+      }
+      .policy_service {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        p {
+          font-family: map-get($map: $font, $key: pretendard);
+          font-size: 2rem;
+          font-weight: bold;
+        }
+        button {
+          width: 40px;
+          height: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border: none;
+          border-radius: 8px;
+          background: map-get($map: $color, $key: main-01);
+          color: map-get($map: $color, $key: light);
+          font-family: map-get($map: $font, $key: pretendard);
+          font-size: 1.4rem;
+          font-weight: bold;
           cursor: pointer;
         }
       }
     }
-    .login_02 {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      .login_social_title {
-        width: 450px;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        hr {
-          width: 100%;
-          position: absolute;
-          top: 50%;
-          border: 1px solid map-get($map: $color, $key: main-02);
-        }
-        p {
-          padding: 10px;
-          font-family: map-get($map: $font, $key: pretendard);
-          font-size: 1.4rem;
-          font-weight: bold;
-          background: map-get($map: $color, $key: light);
-          color: map-get($map: $color, $key: main-02);
-          z-index: 1;
-        }
-      }
-      .login_social_kakao {
-        width: 450px;
-        height: 60px;
-        border: none;
-        border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        background: #fee500;
-        cursor: pointer;
-        p {
-          font-family: map-get($map: $color, $key: pretendard);
-          font-size: 1.8rem;
-          color: map-get($map: $color, $key: dark);
-        }
-      }
-      .login_social_naver {
-        width: 450px;
-        height: 60px;
-        border: none;
-        border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        background: #03c75a;
-        cursor: pointer;
-        p {
-          font-family: map-get($map: $color, $key: pretendard);
-          font-size: 1.8rem;
-          color: map-get($map: $color, $key: light);
-        }
-      }
+    .mypage_quit {
+      font-family: map-get($map: $font, $key: pretendard);
+      font-size: 2rem;
+      text-decoration: underline;
+      text-underline-offset: 5px;
     }
   }
 }
