--- a/detail/styles/detail.css
+++ b/detail/styles/detail.css
@@ -553,3 +553,215 @@ body {
   line-height: 3.3rem;
   color: #000;
 }
+
+header {
+  width: 100%;
+  height: 260px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.07);
+}
+header .header_event {
+  width: 100%;
+  height: 60px;
+  background: #f37100;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: pretendard;
+  font-size: 2rem;
+}
+header .header_event .fa-chevron-right {
+  cursor: pointer;
+}
+header .header_inner {
+  width: 1650px;
+  height: 200px;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
+  position: relative;
+}
+header .header_inner .header_inner_left {
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  position: absolute;
+  left: 0;
+  bottom: 20px;
+}
+header .header_inner .header_inner_left ul {
+  display: flex;
+  gap: 60px;
+}
+header .header_inner .header_inner_left ul li {
+  font-family: pretendard;
+  font-size: 2.8rem;
+  cursor: pointer;
+}
+header .header_inner .header_inner_right {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 95px;
+  position: absolute;
+  right: 0;
+}
+header .header_inner .header_inner_right .inner_right_top ul {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-family: pretendard;
+  font-size: 1.8rem;
+}
+header .header_inner .header_inner_right .inner_right_top ul li {
+  cursor: pointer;
+}
+header .header_inner .header_inner_right .inner_right_bottom {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar {
+  width: 280px;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 25px;
+  border-radius: 40px;
+  background: #f5f5f5;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input {
+  width: 90%;
+  background: inherit;
+  border: none;
+  opacity: 1;
+  font-family: pretendard;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus {
+  outline: none;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus::-moz-placeholder {
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus::placeholder {
+  transition: all 0.3s;
+  opacity: 0;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar .fa-magnifying-glass {
+  cursor: pointer;
+}
+header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
+  width: 40px;
+  height: 32px;
+  font-size: 32px;
+  position: relative;
+  cursor: pointer;
+}
+header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping p {
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f37100;
+  color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  font-size: 12px;
+}
+header .header_inner .header_inner_logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+footer {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f5f5f5;
+  color: #858585;
+}
+footer .footer_inner {
+  width: 1050px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+footer .footer_inner .footer_inner_left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+footer .footer_inner .footer_inner_left img {
+  width: 170px;
+  height: 80px;
+}
+footer .footer_inner .footer_inner_left p {
+  font-family: pretendard;
+  font-size: 1.4rem;
+}
+footer .footer_inner .footer_inner_center {
+  display: flex;
+  flex-direction: column;
+}
+footer .footer_inner .footer_inner_center ul {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+footer .footer_inner .footer_inner_center ul li {
+  font-family: pretendard;
+  font-size: 1.6rem;
+}
+footer .footer_inner .footer_inner_center ul li:last-child {
+  font-size: 2rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  font-family: pretendard;
+}
+footer .footer_inner .footer_inner_right .inner_right_top {
+  display: flex;
+  flex-direction: column;
+}
+footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+  font-size: 2.2rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+  font-size: 3.6rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom {
+  display: flex;
+  gap: 5px;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+  font-size: 1.2rem;
+}
