--- a/style.css
+++ b/style.css
@@ -13,3 +13,23 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+header {
+  width: 100%;
+  height: 260px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+header .header_event {
+  width: 100%;
+  height: 60px;
+  top: 0;
+  position: absolute;
+  background: #f37100;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
